--- a/project/page.html
+++ b/project/page.html
@@ -7,9 +7,8 @@
 <body>
   <h1>Please leave a feedback about your colleague here</h1>
 
-
 <form method=POST>
-  I want to leave a feedback about <input type=text placeholder="Enter full name or email" name=person size=20 />
+  I want to leave a feedback about <input type=text placeholder="Enter Github username" name=person size=20 />
   <textarea rows="10" cols="80" maxlength=5000 placeholder="Start writing your feedback here" wrap=soft >
   </textarea>
   <input type="submit" value="Submit my feedback">
